20100305
 - OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2010/03/04 12:51:25
     [ssh.1 sshd_config.5]
     tweak previous;
   - djm@cvs.openbsd.org 2010/03/04 20:35:08
     [ssh-keygen.1 ssh-keygen.c]
     Add a -L flag to print the contents of a certificate; ok markus@
   - jmc@cvs.openbsd.org 2010/03/04 22:52:40
     [ssh-keygen.1]
     fix Bk/Ek;
   - djm@cvs.openbsd.org 2010/03/04 23:17:25
     [sshd_config.5]
     missing word; spotted by jmc@
   - djm@cvs.openbsd.org 2010/03/04 23:19:29
     [ssh.1 sshd.8]
     move section on CA and revoked keys from ssh.1 to sshd.8's known hosts
     format section and rework it a bit; requested by jmc@
   - djm@cvs.openbsd.org 2010/03/04 23:27:25
     [auth-options.c ssh-keygen.c]
     "force-command" is not spelled "forced-command"; spotted by
     imorgan AT nas.nasa.gov
   - djm@cvs.openbsd.org 2010/03/05 02:58:11
     [auth.c]
     make the warning for a revoked key louder and more noticable
   - jmc@cvs.openbsd.org 2010/03/05 06:50:35
     [ssh.1 sshd.8]
     tweak previous;
   - jmc@cvs.openbsd.org 2010/03/05 08:31:20
     [ssh.1]
     document certificate authentication; help/ok djm
   - djm@cvs.openbsd.org 2010/03/05 10:28:21
     [ssh-add.1 ssh.1 ssh_config.5]
     mention loading of certificate files from [private]-cert.pub when
     they are present; feedback and ok jmc@
 - (tim) [ssh-pkcs11.c] Fix "non-constant initializer" errors in older
   compilers. OK djm@
 - (djm) [ssh-rand-helper.c] declare optind, avoiding compilation failure
   on some platforms
 - (djm) [configure.ac] set -fno-strict-aliasing for gcc4; ok dtucker@

20100304
 - (djm) [ssh-keygen.c] Use correct local variable, instead of
   maybe-undefined global "optarg"
 - (djm) [contrib/redhat/openssh.spec] Replace obsolete BuildPreReq
   on XFree86-devel with neutral /usr/include/X11/Xlib.h;
   imorgan AT nas.nasa.gov in bz#1731
 - (djm) [.cvsignore] Ignore ssh-pkcs11-helper
 - (djm) [regress/Makefile] Cleanup sshd_proxy_orig
 - OpenBSD CVS Sync